Prune cache on a timer